<resources>
    <string name="app_name">Trip++</string>
    <string name="app_name_home">Trip++</string>
    <string name="login_button_text">Iniciar Sesión</string>
    <string name="signup_button_text">Registro</string>
    <string name="login_activity_title">Inicio de Sesión</string>
    <string name="signup_confirm_button_text">Enviar</string>
    <string name="login_confirm_button_text">Ingresar</string>
    <string name="signup_activity_title">Registro</string>
    <string name="email_field_name">E-mail:</string>
    <string name="password_field_name">Contraseña:</string>
    <string name="new_query_welcome_msg">¿A dónde vamos?</string>
    <string name="search_ticket_msg">Buscar</string>
    <string name="ticket_from_msg">Origen:</string>
    <string name="ticket_to_msg">Destino:</string>
    <string name="ticket_date_msg">Fecha:</string>
    <string name="route_field_title">Ruta:</string>
    <string name="travel_date_field_title">Fecha:</string>
    <string name="results_count_msg"> coincidencia(s)</string>
    <string name="purchase_btn_text"> Finalizar</string>
    <string name="pick_seat_msg"> Elegir Asiento(s)</string>
    <string name="departure_field_title"> Salida:</string>
    <string name="services_field_title"> Servicios:</string>
    <string name="price_field_title"> Precio:</string>
    <string name="buy_another_btn_text"> Agregar</string>
    <string name="current_purchase_msg"> asiento(s) seleccionado(s)</string>
    <string name="checkout_method_field_name"> Método:</string>
    <string name="seats_field_name"> Número(s) de asiento: </string>
    <string name="demo_complete_msg"> Demo completado con éxito! </string>
    <string name="required_field_error_msg"> Campo requerido </string>
    <string name="invalid_email"> Por favor ingrese un E-mail válido </string>
    <string name="short_password_error_msg">La contraseña debe contener al menos 6 caracteres</string>
    <string name="register_error_msg">Error al registrar usuario</string>
    <string name="register_success_msg">¡Registrado con éxito!</string>
    <string name="duplicate_user_error_msg">Error: Este usuario ya se ha registrado antes.</string>
    <string name="login_error_msg">Error de autenticación.</string>
    <string name="loading_msg">Espere...</string>
    <string name="id_field_name">Cédula</string>
    <string name="lastname_field_name">Apellido</string>
    <string name="name_field_name">Nombre</string>
    <string name="payment_error_msg">Ocurrió un error al procesar su pago</string>
</resources>
