<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".QueryResultsActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="6dp"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:paddingTop="6dp">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/route_field_title"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/route_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="6dp"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:paddingTop="6dp">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/travel_date_field_title"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/travel_date_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="6dp"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:paddingTop="6dp">

            <TextView
                android:id="@+id/results_count_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/results_count_msg"
                android:textStyle="italic" />
        </TableRow>

    </TableLayout>

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>