<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SeeTicketDetailsActivity">

    <TextView
        android:id="@+id/company_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_weight="1"
        android:padding="12dp"
        android:text="TextView"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <LinearLayout
        android:id="@+id/star_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:gravity="left"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="@+id/company_name_text_view"
        app:layout_constraintStart_toStartOf="@+id/company_name_text_view"
        app:layout_constraintTop_toBottomOf="@+id/company_name_text_view"
        tools:context=".SeeTicketDetailsActivity">

        <TextView
            android:id="@+id/star_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/fa_icon_star"
            android:textSize="25sp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/star_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/fa_icon_star"
            android:textSize="25sp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/star_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/fa_icon_star"
            android:textSize="25sp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/star_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/fa_icon_star"
            android:textSize="25sp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/star_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/fa_icon_star"
            android:textSize="25sp"
            android:visibility="invisible" />

    </LinearLayout>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@+id/star_container"
        tools:layout_editor_absoluteX="16dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="6dp"
            android:paddingRight="12dp"
            android:paddingTop="12dp">

            <TextView
                android:id="@+id/details_route"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/route_field_title"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/route_details_concat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:padding="3dp"
                android:text="TextView" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="6dp"
            android:paddingRight="12dp"
            android:paddingTop="12dp">

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/departure_field_title"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/departure_detail_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:padding="3dp"
                android:text="TextView" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="6dp"
            android:paddingRight="12dp"
            android:paddingTop="12dp">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/services_field_title"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="244dp" />

            <TextView
                android:id="@+id/services_detail_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:padding="3dp"
                android:text="TextView"
                tools:layout_editor_absoluteX="72dp"
                tools:layout_editor_absoluteY="244dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="6dp"
            android:paddingRight="12dp"
            android:paddingTop="12dp">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/price_field_title"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/price_detail_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:padding="3dp"
                android:text="TextView" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingBottom="6dp"
            android:paddingRight="12dp"
            android:paddingTop="12dp">

            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/pick_seat_msg"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown" />

        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/checkoutBtn"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/darker_gray"
        android:enabled="false"
        android:padding="12dp"
        android:text="@string/purchase_btn_text"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <Button
        android:id="@+id/addToCartBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/black"
        android:padding="12dp"
        android:text="@string/buy_another_btn_text"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="@+id/checkoutBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/current_purchase_text_view"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:padding="0dp"
        android:text="TextView"
        android:textColor="@android:color/holo_green_dark"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/addToCartBtn"
        app:layout_constraintEnd_toStartOf="@+id/checkoutBtn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/addToCartBtn"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>